--- a/src/Pages/Shop/Shop.css
+++ b/src/Pages/Shop/Shop.css
@@ -48,7 +48,7 @@
     height: 100vh;
     padding-top: 250px;
 }
-.firstBoxx{
+.firstBox{
     width: 100%;
     height: 400px;
     background-color: rgba(0, 0, 0, 0.1);
@@ -66,7 +66,7 @@
     height: 70px !important;
     margin-right: 60px;
 }
-.secondBoxx{
+.secondBox{
     width: 100%;
     height: 750px;
     background-color: rgba(0, 0, 0, 0.1);
@@ -79,7 +79,7 @@
     margin-top: 50px;
     border-radius: 40px;
 }
-.secondBoxx ul{
+.secondBox ul{
     position: absolute;
     left: 60px;
     top: 120px;
@@ -96,7 +96,7 @@
     color: #01e281;
     font-size: 30px;
 }
-.ThreeBoxx{
+.ThreeBox{
     width: 100%;
     min-height: 350px;
     background-color: rgba(0, 0, 0, 0.1);
