--- a/src/components/SecondListHeader/SecondListHeader.css
+++ b/src/components/SecondListHeader/SecondListHeader.css
@@ -54,7 +54,7 @@
     width: 189px;
     transform: translateX(-30px);
   }
-  .Bigline{
+  .BigLine{
     width: 1px;
     height: 300px;
     background-color: #555555;
@@ -63,22 +63,22 @@
   /* Media Queries */
 @media (max-width: 1200px) {
   .listHeader {
-      width: 80%; /* زيادة العرض في الشاشات الأصغر */
-      height: auto; /* جعل الارتفاع تلقائي */
-      padding-left: 20px; /* تقليل الحشو الأيسر */
-      gap: 20px; /* تقليل الفجوة بين العناصر */
-      top: 50px; /* تقليل المسافة العلوية */
+      width: 80%; 
+      height: auto;
+      padding-left: 20px;
+      gap: 20px; 
+      top: 50px; 
   }
 
   .list h1 {
-      font-size: 22px; /* تقليل حجم الخط */
-      transform: translateX(0); /* إزالة التحويل */
+      font-size: 22px; 
+      transform: translateX(0); 
   }
 
   .list ul li {
-      font-size: 18px; /* تقليل حجم الخط */
-      transform: translateX(0); /* إزالة التحويل */
-      width: auto; /* جعل العرض تلقائي */
+      font-size: 18px; 
+      transform: translateX(0); 
+      width: auto; 
   }
 
   .iconList {
